--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -1,10 +1,11 @@
 uecode_qpush:
     cache_service: null
     providers:
-        - { name: aws, provider_service: my_service_id
+        - { name: aws, provider_service: my_service_id }
     queues:
         default:
             provider: aws
-            push_notifications: true
-            subscribers:
-                - { endpoint: http://example.com, protocol: http }
+            options:
+                push_notifications: true
+                subscribers:
+                    - { endpoint: http://example.com, protocol: http }
