--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require-dev": {
         "phpunit/phpunit":        "~3.7",
-        "aws/aws-sdk-php":        "~2.5,<3.0.0",
+        "aws/aws-sdk-php":        "~2.5",
         "iron-io/iron_mq":        "~1.5"
     },
     "suggest": {
